Fix z-indexes

--- a/critiquebrainz/frontend/static/styles/theme/variables.less
+++ b/critiquebrainz/frontend/static/styles/theme/variables.less
@@ -205,13 +205,13 @@
 // Used for a bird's eye view of components dependent on the z-axis
 // Try to avoid customizing these :)
 
-@zindex-navbar: 1000;
-@zindex-dropdown: 1000;
-@zindex-popover: 1010;
-@zindex-tooltip: 1030;
-@zindex-navbar-fixed: 1030;
-@zindex-modal-background: 1040;
-@zindex-modal: 1050;
+@zindex-navbar: 900;
+@zindex-dropdown: 900;
+@zindex-popover: 910;
+@zindex-tooltip: 930;
+@zindex-navbar-fixed: 930;
+@zindex-modal-background: 940;
+@zindex-modal: 950;
 
 // Media queries breakpoints
 // --------------------------------------------------
